tests/expectations/compiler/core/constants/group_gen_fail.out
Error [ETYC0372005]: Unknown variable `group::GENERATOR`
    --> compiler-test:6:24
     |
   6 |         let a: group = group::GENERATOR;
     |                        ^^^^^^^^^^^^^^^^
